# forbidden-text-check

./: Cargo.toml  LICENSE
benches/: bench_check.rs  bench_numbers.rs
examples/: 01_basic.rs  02_offload.rs  03_per_processor.rs  04_many_cpus.rs  04_many_processors.rs  05_pinned_threads.rs  05_region_cached.rs  05b_region_local.rs  06_pinned_threads.rs  06_region_cached.rs  06_region_cached_pinned.rs  06b_region_local.rs  07_region_cached_only.rs  07_region_cached_unpin.rs  07b_region_local_unpin.rs  08_region_local_pinned.rs  check_cached.rs  check_local.rs  check_static.rs  cross_region_check_static.rs  number_crunch_cached.rs  number_crunch_local.rs  number_crunch_static.rs  old_05_region_cached.rs
k6/: check_10_0_0_7.js  check_10_0_0_7_fresh.js  check_10_0_0_7_reuse.js  check_10_0_0_8.js  check_10_0_0_8_fresh.js  check_10_0_0_8_reuse.js  check_localhost.js  check_localhost_fresh.js  check_localhost_reuse.js
src/: lib.rs
