[package]
name = "illegal-numbers-check"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.1"
hyper = "1.6.0"
hyper-util = { version = "0.1.10", features = ["tokio"] }
region_cached = "0.0.6"
region_local = "0.0.7"
many_cpus = "0.0.5"
num_cpus = "1.16.0"
tokio = { version = "1.44.1", features = ["full"] }
tower = "0.5.2"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.29.0", features = ["resource"] }

[profile.release]
# This ensures we have high quality data with full symbols when profiling.
debug = "full"
